@@ -2,6 +2,8 @@
 1. Fix the bug of optional closing tags.
 2. Fix the bug of parsing line break next tot tag name.
 3. Add more advanced selector features (Thanks to Yousuke Kumakura for the patch of selector improvements).
+4. Supports tag name with namespace
+#. Refine structure of testcase.
 
 [PHP Simple HTML DOM Parser v0.94 is released]
 1. Stop infinity loop while tthe source content is BAD HTML.
